@@ -20,6 +20,7 @@ export(addNMF)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
+export(addPrevalence)
 export(addRDA)
 export(addTaxonomyTree)
 export(agglomerateByPrevalence)
@@ -181,6 +182,7 @@ exportMethods(addNotContaminantQC)
 exportMethods(addPERMANOVA)
 exportMethods(addPerSampleDominantFeatures)
 exportMethods(addPerSampleDominantTaxa)
+exportMethods(addPrevalence)
 exportMethods(addRDA)
 exportMethods(addTaxonomyTree)
 exportMethods(agglomerateByPrevalence)
